# mlinstruct

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
ivy/: __init__.py
ivy/evaluation/: evaluator.py
ivy/evaluation/metrics/: __init__.py  _confusion_matrix.py
ivy/evaluation/plots/: __init__.py  confusion_matrix.py  roc.py  training_loss.py
ivy/metrics/: __init__.py
ivy/metrics/plots/: __init__.py  _confusion_matrix_plotter.py  _roc_plotter.py
ivy/utils/: __init__.py  _option.py  _result.py
loss/: __init__.py  focal_loss.py  wtss_loss.py
metrics/: evaluator.py  plots.py
mlinstruct/: __init__.py
mlinstruct/eval/metrics/: __init__.py  _base_metric.py  _utils.py
mlinstruct/eval/plots/: __init__.py  _cm_plotter.py  _loss_plotter.py  _roc_plotter.py
mlinstruct/evaluation/: __init__.py
mlinstruct/evaluation/metrics/: __init__.py  _confusion_matrix.py  _metric_utils.py
mlinstruct/evaluation/plots/: __init__.py  _cm_plotter.py  _roc_plotter.py
mlinstruct/loss/: __init__.py
mlinstruct/train/: __init__.py  _base_trainer.py  _early_stopper.py  _torch_trainer.py  _trainer.py
mlinstruct/train/extensions/: __init__.py  _base_extension.py  _checkpoints.py  _early_stopper.py  _extension.py
mlinstruct/train/model_proxy/: __init__.py  _base_model_proxy.py  _torch_model_proxy.py
mlinstruct/train/trainer/: __init__.py  _base_trainer.py  _default_trainer.py
mlinstruct/utils/: __init__.py  _funcs.py  _result.py  exceptions.py
tests/utils/: test_option.py  test_result.py  test_utils_option.py  test_utils_result.py
train/: trainer.py
(+8 files in other folders)
