[tool.poetry]
name = "mlinstruct"

version = "0.1.0"
description = "Python library for managing ML model training instances and evaluation graph generation"
authors = ["Rahul Pavithran <rahul.pavithran99@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alpha2303/ivy-torch"

packages = [{include = "mlinstruct", from = "."}]

[tool.poetry.dependencies]
python = "^3.11, <4.0"
numpy = "^1.26.2"
matplotlib = "^3.6.3"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
torchinfo = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
